refactor: Update project name to Stukent Search Performance Analyst
Renames the project from "Stukent PPC Analyst AI" to "Stukent Search Performance Analyst" across package.json, index.html, metadata.json, and the Header component to better reflect its functionality.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stukent-ppc-analyst-ai",
+  "name": "stukent-search-performance-analyst",
   "private": true,
   "version": "0.0.0",
   "type": "module",
